plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.5' // 3.2.5 -> 스웨거랑 호환하려면 수정..
	id 'io.spring.dependency-management' version '1.1.7'
}

ext {
	set('springCloudVersion', "2023.0.1") // Or the appropriate version for Spring Boot 3.2.5
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

group = 'com.voiceprint'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}



dependencies {
	implementation project(':services:common-auth')

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springframework.kafka:spring-kafka'

	runtimeOnly 'com.mysql:mysql-connector-j'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// dotenv 의존성 추가
	implementation("io.github.cdimascio:dotenv-java:3.0.0")

	// Swagger 의존성 추가
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

	// Redis 의존성 추가
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// s3
	implementation 'software.amazon.awssdk:s3:2.31.4'


	// Spring AI - openAI
	implementation platform("org.springframework.ai:spring-ai-bom:1.0.1")
	implementation 'org.springframework.ai:spring-ai-starter-model-openai'

	// JDBC 구혀네 사용을 위한 의존성
	implementation 'org.springframework.ai:spring-ai-starter-model-chat-memory-repository-jdbc'

	// Spring Cloud Config Client
	implementation 'org.springframework.cloud:spring-cloud-starter-config'
	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'

	//actuator
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	
	//prometeus
	implementation 'io.micrometer:micrometer-registry-prometheus'

//	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.kafka:spring-kafka-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}

